examples/smlfmt-1.2.0/test/fail/bad-strdec-4.sml
structure Hello :>
sig
  val hello: string -> unit
end =
struct
  print "hello\n"
end
